--- a/base/configs/openmrs/frontend_config/ozone-frontend-config.json
+++ b/base/configs/openmrs/frontend_config/ozone-frontend-config.json
@@ -17,12 +17,12 @@
       "gender": [
         {
           "id": "male",
-          "value": "Male",
+          "value": "male",
           "label": "Male"
         },
         {
           "id": "female",
-          "value": "Female",
+          "value": "female",
           "label": "Female"
         }
       ]
