--- a/base/pom.xml
+++ b/base/pom.xml
@@ -12,7 +12,9 @@
 
   <artifactId>ozone-cambodia</artifactId>
   <version>1.7.0-SNAPSHOT</version>
-  <description>Ozone Cambodia</description>
+  <name>Ozone Cambodia</name>
+  <description>Ozone distribution for Cambodia</description>
+  <packaging>pom</packaging>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,6 +24,10 @@
     <!-- Classifier for the dependency report artifact -->
     <dependencyReportClassifier>dependencies</dependencyReportClassifier>
   </properties>
+
+  <modules>
+    <module>configs/superset</module>
+  </modules>
 
   <dependencies>
     <!-- TODO: Add any implementation-specific dependencies -->
