--- a/prod/pom.xml
+++ b/prod/pom.xml
@@ -12,7 +12,9 @@
 
   <artifactId>ozone-cambodia-prod</artifactId>
   <version>1.7.0-SNAPSHOT</version>
-  <description>Ozone Cambodia - with production dependencies</description>
+  <description>Ozone distribution for Cambodia - with production dependencies</description>
+  <name>Ozone Cambodia Prod</name>
+  <packaging>pom</packaging>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
