--- a/base/configs/superset/pom.xml
+++ b/base/configs/superset/pom.xml
@@ -15,6 +15,7 @@
     <name>Ozone Cambodia Superset configs</name>
     <description>Superset configurations specific to Ozone Cambodia, to be used in Ozone Analytics</description>
     <packaging>pom</packaging>
+    <version>1.7.0-SNAPSHOT</version>
 
     <organization>
         <name>Ozone HIS</name>
