--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,14 @@ fabric.properties
 # CodeStream plugin
 # https://plugins.jetbrains.com/plugin/12206-codestream
 .idea/codestream.xml
+.idea/compiler.xml
+.idea/encodings.xml
+.idea/jarRepositories.xml
+.idea/jsLibraryMappings.xml
+.idea/material_theme_project_new.xml
+.idea/palantir-java-format.xml
+.idea/vcs.xml
+.idea/misc.xml
 
 ### macOS ###
 # General
