KH-524: Add CCS for women report

--- a/base/configs/superset/assets/datasets/PostgreSQL/self-breast_educated_and_examined_women_dataset.yaml
+++ b/base/configs/superset/assets/datasets/PostgreSQL/self-breast_educated_and_examined_women_dataset.yaml
@@ -1,4 +1,4 @@
-table_name: self-breast-educated-and-examinated-women
+table_name: Self-Breast Educated and Examined Women
 main_dttm_col: null
 description: null
 default_endpoint: null
